rem bevezetése a styles.css-ben

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,13 @@
-h1 {
+ html {font-size:10px;
+}
+ h1 {
     color: darkgoldenrod;
-    font-size: 48px;
+    font-size: 4.8rem;
 
 
 }
 p {
-    font-size: 18px;
+
+    font-size: 1.8rem;
     letter-spacing: 1px;
 }
