--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 html {font: 10px;}
-h1 {color: rgba(255, 235, 205, 0.822);
+h1 {color:red;
+    text-decoration: underline;
 font-size: 48px;}
 p {font-size: 1.8rem;
 letter-spacing: 1px;}
