kék cim javitás

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,14 @@
- html {font-size:10px;
+html {
+    font: 10px;
 }
- h1 {
-    color: darkgoldenrod;
-    text-decoration: underline;
-    font-size: 4.8rem;
 
-
-}
+h1 {
+        color: blue;
+        text-decoration: underline;
+        font-size: 48px;
+    }
+    
 p {
-
     font-size: 1.8rem;
-    letter-spacing: 1px;
+letter-spacing: 1px;
 }
